[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["Elias Nau"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [ "tray-icon" ] }
tauri-plugin-log = "2.0.0-rc"
rodio = "0.20.1"
rand = "0.8.5"
tauri-plugin-store = "2"
once_cell = "1.20.2"
winreg = "0.50"  # For Windows Registry
keyring = "2.0"  # For system keyring
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

